test/runnable/test11063.d
import std.stdio;
void main() { mixin("writeln(__MODULE__);"); }
